--- a/il_gov_counter/cctaxes/requirements.txt
+++ b/il_gov_counter/cctaxes/requirements.txt
@@ -1,212 +1,31 @@
-aot-client==2.1.0
-appdirs==1.4.3
-asn1crypto==0.24.0
-atomicwrites==1.3.0
-attrs==19.1.0
-Automat==0.7.0
-backcall==0.1.0
-backports.csv==1.0.7
-bcrypt==3.1.6
 beautifulsoup4==4.7.1
-bleach==3.1.0
-bokeh==1.4.0
-boto3==1.9.145
-botocore==1.12.145
-branca==0.3.1
-cachetools==3.1.0
-certifi==2019.9.11
-cffi==1.12.3
-chardet==3.0.4
-Click==7.0
-click-plugins==1.1.1
-cligj==0.5.0
-colorama==0.4.1
-constantly==15.1.0
-cryptography==2.6.1
-cssselect==1.0.3
-cycler==0.10.0
-cymem==2.0.2
-cytoolz==0.9.0.1
-decorator==4.4.0
-defusedxml==0.5.0
-descartes==1.1.0
+certifi==2019.6.16
+defusedxml==0.6.0
 diff-match-patch==20181111
-dill==0.2.9
-Django==2.2.1
-django-chart-tools==1.0
-django-import-export==1.2.0
+Django==2.2.2
+django-import-export==2.0.1
 django-pandas==0.6.1
-docutils==0.14
-en-core-web-lg==2.0.0
-en-core-web-sm==2.0.0
-entrypoints==0.3
+django-widget-tweaks==1.4.5
 et-xmlfile==1.0.1
-Fiona==1.8.4
-folium==0.9.0
-foursquare==1!2019.2.16
-future==0.17.1
-GDAL==2.3.3
-geographiclib==1.49
-geopandas==0.4.1
-geopy==1.19.0
-google-api-core==1.10.0
-google-api-python-client==1.7.11
-google-auth==1.6.3
-google-auth-httplib2==0.0.3
-google-auth-oauthlib==0.4.1
-google-cloud-core==0.29.1
-google-cloud-dataproc==0.3.1
-google-cloud-logging==1.10.0
-google-cloud-storage==1.15.0
-google-resumable-media==0.3.2
-googleapis-common-protos==1.5.10
-googledrivedownloader==0.4
-gunicorn==19.9.0
-html5lib==1.0.1
-httplib2==0.12.3
-hyperlink==19.0.0
-idna==2.8
-importlib-metadata==0.0.0
-incremental==17.5.0
-ipykernel==5.1.0
-ipython==7.4.0
-ipython-genutils==0.2.0
-ipywidgets==7.5.1
 jdcal==1.4.1
-jedi==0.13.3
-jellyfish==0.5.6
-Jinja2==2.10
-jmespath==0.9.4
-joblib==0.14.0
-jsonschema==3.0.1
-jupyter-client==5.2.4
-jupyter-core==4.4.0
-kiwisolver==1.1.0
-linecache2==1.0.0
-lxml==4.3.3
-mapclassify==2.0.1
-MarkupSafe==1.1.1
-matplotlib==3.1.1
-MechanicalSoup==0.11.0
-mechanize==0.4.2
-mistune==0.8.4
-mkl-fft==1.0.6
-mkl-random==1.0.1
-mock==3.0.5
-more-itertools==4.3.0
-mortgage==1.0.3
-mrjob==0.6.8
-msgpack==0.6.1
-msgpack-numpy==0.4.3.2
-munch==2.3.2
-murmurhash==1.0.2
-nbconvert==5.4.1
-nbformat==4.4.0
-networkx==2.3
-notebook==5.7.7
-numpy==1.15.4
-oauth2==1.9.0.post1
-oauthlib==3.1.0
-odfpy==1.4.0
-openpyxl==2.6.2
-packaging==19.2
+MarkupPy==1.14
+numpy==1.16.4
+odfpy==1.4.1
+openpyxl==3.0.3
 pandas==0.24.2
-pandas-datareader==0.7.0
-pandocfilters==1.4.2
-parsel==1.5.1
-parso==0.3.4
-patsy==0.5.1
-pickleshare==0.7.5
-Pillow==6.2.1
 pipenv==2018.11.26
-plac==0.9.6
-plotly==4.1.1
-pluggy==0.12.0
-preshed==2.0.1
-prometheus-client==0.6.0
-prompt-toolkit==2.0.9
-protobuf==3.7.1
-psycopg2==2.7.6.1
-py==1.8.0
-pyasn1==0.4.5
-pyasn1-modules==0.2.5
-pycparser==2.19
-pycurl==7.43.0.2
-PyDispatcher==2.0.5
-Pygments==2.3.1
-PyHamcrest==1.9.0
-pyOpenSSL==19.0.0
-pyparsing==2.4.0
-PyPDF2==1.26.0
-pyproj==1.9.6
-pyreadline==2.1
-pyrsistent==0.14.11
-PySocks==1.6.8
-pytest==4.5.0
-pytest-runner==4.4
 python-dateutil==2.8.0
-pytz==2018.9
-pywin32==224
-pywinpty==0.5.5
-PyYAML==5.1
-pyzmq==18.0.0
-queuelib==1.5.0
-rauth==0.7.3
-regex==2019.8.19
-requests==2.21.0
-requests-oauthlib==1.3.0
-retrying==1.3.3
-rsa==4.0
-Rtree==0.8.3
-s3transfer==0.2.0
-scikit-learn==0.21.3
-scipy==1.3.0
-Scrapy==1.5.2
-seaborn==0.9.0
+pytz==2019.1
+PyYAML==5.3
 selenium==3.141.0
-Send2Trash==1.5.0
-service-identity==18.1.0
-Shapely==1.6.4.post1
-simplejson==3.16.0
 six==1.12.0
-sklearn==0.0
-sodapy==1.5.2
-soupsieve==1.9.1
-spacy==2.0.16
-SQLAlchemy==1.3.3
+soupsieve==1.9.2
 sqlparse==0.3.0
-statsmodels==0.9.0
-tablib==0.13.0
-TBB==0.1
-terminado==0.8.1
-testify==0.11.0
-testpath==0.4.2
-thinc==6.12.1
-toolz==0.10.0
-tornado==6.0.2
-tqdm==4.36.1
-traceback2==1.4.0
-traitlets==4.3.2
-Twisted==19.2.0
-twitter==1.18.0
-ujson==1.35
-unittest2==1.1.0
-uritemplate==3.0.0
-urllib3==1.24.3
-urlopen==1.0.0
-us==1.0.0
+tablib==0.14.0
+urllib3==1.25.3
 virtualenv==16.5.0
 virtualenv-clone==0.5.3
-w3lib==1.20.0
-wcwidth==0.1.7
-webencodings==0.5.1
-whitenoise==4.1.2
-widgetsnbextension==3.5.1
-win-inet-pton==1.1.0
+whitenoise==5.0.1
 wincertstore==0.2
-wrapt==1.10.11
 xlrd==1.2.0
 xlwt==1.3.0
-yelp==1.0.2
-zipp==0.5.0
-zope.interface==4.6.0
