--- a/il_gov_counter/cctaxes/requirements.txt
+++ b/il_gov_counter/cctaxes/requirements.txt
@@ -3,7 +3,9 @@ certifi==2019.6.16
 defusedxml==0.6.0
 diff-match-patch==20181111
 Django==2.2.2
+django-import-export==2.0.1
 django-pandas==0.6.1
+django-widget-tweaks==1.4.5
 et-xmlfile==1.0.1
 jdcal==1.4.1
 MarkupPy==1.14
